// Copyright 2025 Author(s) of MCP Any
// SPDX-License-Identifier: Apache-2.0

edition = "2023";

package mcpany.api.v1;

import "google/api/annotations.proto";

option go_package = "github.com/mcpany/core/proto/api/v1";
option java_outer_classname = "CacheProto";
option features.field_presence = IMPLICIT;

message ClearCacheRequest {}

message ClearCacheResponse {}

service CacheService {
    rpc ClearCache(ClearCacheRequest) returns (ClearCacheResponse) {
        option (google.api.http) = {
            post: "/v1/cache/clear"
            body: "*"
        };
    }
}
